tests/parsing/smtlib/v2.6/errors/130_datatype_dec_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/130_datatype_dec_unclosed_1.smt2", line 2, character 37-38:
2 | (declare-datatype foo (par (a) ((A)) _))
                                         ^
Error while parsing a datatype declaration, read the reserved word '_',
      but expected a closing parenthesis.
